--- a/cclhm0069/_toc.yml
+++ b/cclhm0069/_toc.yml
@@ -5,6 +5,9 @@ parts:
     chapters:
     - file: 1_ementa
       title: Ementa
+      sections:
+      - file: 1_1_bilio
+        title: Bibliografia
     - file: 2_estrutura-do-curso
       title: Estrutura do Curso
       sections:
