--- a/cclhm0069/_toc.yml
+++ b/cclhm0069/_toc.yml
@@ -6,7 +6,7 @@ parts:
     - file: 1_ementa
       title: Ementa
       sections:
-      - file: 1_1_bilio
+      - file: 1_1_biblio
         title: Bibliografia
     - file: 2_estrutura-do-curso
       title: Estrutura do Curso
