--- a/cclhm0069/_config.yml
+++ b/cclhm0069/_config.yml
@@ -1,9 +1,9 @@
 #######################################################################################
 # Book settings
-title                       : "Introdução à História Digital"
+title                       : "CCLHM0069 Introdução à História Digital"
 author                      : <a href="https://ericbrasiln.github.io/">Eric Brasil</a>  # The author of the book
 copyright                   : "2021"  # Copyright year to be placed in the footer
-logo                        : "images/logo/logohist.png"  # A path to the book logo
+logo                        : "images/logo/logo_semletra.png"  # A path to the book logo
 execute:
   execute_notebooks: "off"
 
@@ -27,11 +27,11 @@ parse:
 #######################################################################################
 # HTML-specific settings
 html:
-  favicon                   : "images/logo/favicon.ico"  # A path to a favicon image
+  favicon                   : "images/favicon.ico"  # A path to a favicon image
   use_edit_page_button      : false  # Whether to add an "edit this page" button to pages. If `true`, repository information in repository: must be filled in
   use_repository_button     : true  # Whether to add a link to your repository button
   use_issues_button         : true  # Whether to add an "open an issue" button
-  use_multitoc_numbering    : false   # Continuous numbering across parts/chapters
+  use_multitoc_numbering    : true   # Continuous numbering across parts/chapters
   extra_navbar              : Powered by <a href="https://jupyterbook.org">Jupyter Book</a>  # Will be displayed underneath the left navbar.
   extra_footer              : 
     <div>
@@ -61,7 +61,7 @@ launch_buttons:
 
 repository:
   url                       : https://ericbrasiln.github.io/intro-historia-digital/  # The URL to your book's repository
-  path_to_book              : "docs"  # A path to your book's folder, relative to the repository root.
+  path_to_book              : ""  # A path to your book's folder, relative to the repository root.
   branch                    : main  # Which branch of the repository should be used when creating links
 
 #######################################################################################
