ciração de exercícios sem 14

--- a/cclhm0069/_toc.yml
+++ b/cclhm0069/_toc.yml
@@ -100,6 +100,9 @@ parts:
         title: Apresentação
     - file: mod4b/sem14
       title: Semana 14
+      sections:
+      - file: mod4b/exercicios.ipynb
+        title: Exercícios
     - file: mod4b/sem15
       title: Semana 15
     - file: mod4b/sem16
